2008-03-27  Tyler Roemo  <tylerromeo@gmail.com>

	Exchanged invalid "true" and "false" return values with 1 and 0.

	Added controller for Account Shell.

	*app/models/Config.py (Config.__init__): Removed default value for initOptions since a dictionary is expected.
	*app/models/Config.py (Config.updateFromFile): Removed usage of ROOTPATH variable.
	*app/models/Config.py (Config.updateToFile): Same as above.

	*app/models/Request.py (Request): Added variable to identify new account request.
	Added function to check passwords on requests.

	*app/views/AccountShell.py (MainMenu): Removed unnecessary parameter.
	Replaced lists in the Request_* functions and QuestionList common view with dictionaries for support with Request class.

2008-03-26  Tyler Romeo  <tylerromeo@gmail.com>

	*app/views/AccountShell.py (MainMenu): Changed nature of view by letting the controller loop the menu instead of the view.
	Added the Request_* functions, which will return user information to MainMenu() and then to the controller.

	Added new common view functions for retrieving passwords and printing simple messages.

2008-03-25  Tyler Romeo  <tylerromeo@gmail.com>

	Add bootstrap file to automatically import all modules.

	*app/views/Common.py (ShellMenu): Removing printing of new lines (formatting error).
	*app/views/Common.py (QuestionList): Same as above.

2008-03-24  Tyler Romeo  <tylerromeo@gmail.com>

	Added view for Main Menu.

	*app/views/Common.py (ShellMenu): Replaced occurrences of string.zfill() with string.ljust(), fixed other syntax errors.
	*app/views/Common.py (QuestionList): Same as above.

2008-03-22  Tyler Romeo  <tylerromeo@gmail.com>

	Loading of modules in directory structure now works since __init__.py files have been added.

2008-03-21  Tyler Romeo <tylerromeo@gmail.com>

	Added list of common functions for all views.

2008-03-20  Tyler Romeo  <tylerromeo@gmail.com>
